added semantic html elements to better explain what the elements pertain to in case another developer works on this, using the scout rule.

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,9 +7,9 @@
     </head>
 
     <body>
-        <div class="header">
+        <header class="header">
             <h1>Hori<span class="seo">seo</span>n</h1>
-            <div>
+            <nav>
                 <ul>
                     <li>
                         <a href="#search-engine-optimization"
@@ -27,10 +27,10 @@
                         >
                     </li>
                 </ul>
-            </div>
-        </div>
+            </nav>
+        </header>
         <div class="hero"></div>
-        <div class="content">
+        <section class="content">
             <div class="search-engine-optimization">
                 <img
                     src="./assets/images/search-engine-optimization.jpg"
@@ -75,8 +75,8 @@
                     the right markets and increase your lead generation.
                 </p>
             </div>
-        </div>
-        <div class="benefits">
+        </section>
+        <aside class="benefits">
             <div class="benefit-lead">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" />
@@ -103,10 +103,10 @@
                     advertise your page.
                 </p>
             </div>
-        </div>
-        <div class="footer">
+        </aside>
+        <footer class="footer">
             <h2>Made with ❤️️ by Horiseon</h2>
             <p>&copy; 2024 Horiseon Social Solution Services, Inc.</p>
-        </div>
+        </footer>
     </body>
 </html>
