--- a/Develop/index.html
+++ b/Develop/index.html
@@ -34,6 +34,7 @@
             <div class="search-engine-optimization">
                 <img
                     src="./assets/images/search-engine-optimization.jpg"
+                    alt="Notepad on desk"
                     class="float-left"
                 />
                 <h2>Search Engine Optimization</h2>
@@ -51,6 +52,7 @@
             >
                 <img
                     src="./assets/images/online-reputation-management.jpg"
+                    alt="Man using laptop and smartphone"
                     class="float-right"
                 />
                 <h2>Online Reputation Management</h2>
@@ -65,6 +67,7 @@
             <div id="social-media-marketing" class="social-media-marketing">
                 <img
                     src="./assets/images/social-media-marketing.jpg"
+                    alt="Various people using tablets and laptops and conversating"
                     class="float-left"
                 />
                 <h2>Social Media Marketing</h2>
@@ -79,7 +82,10 @@
         <aside class="benefits">
             <div class="benefit-lead">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" />
+                <img
+                    src="./assets/images/lead-generation.png"
+                    alt="Icon to Lead Generation"
+                />
                 <p>
                     Inbound strategies for lead generation require less work for
                     your business, bringing customers directly to your website.
@@ -87,7 +93,10 @@
             </div>
             <div class="benefit-brand">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" />
+                <img
+                    src="./assets/images/brand-awareness.png"
+                    alt="Icon to Brand Awareness"
+                />
                 <p>
                     Users find your business through paid and organic searches,
                     increasing the search ranking and visibility for your
@@ -96,7 +105,10 @@
             </div>
             <div class="benefit-cost">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" />
+                <img
+                    src="./assets/images/cost-management.png"
+                    alt="Icon to Cost Management"
+                />
                 <p>
                     As the search ranking for your business increases, your
                     advertising costs decrease, and you no longer need to
