Changed to address element name for a better description. Using semantic html elements.

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -118,7 +118,9 @@
         </aside>
         <footer class="footer">
             <h2>Made with ❤️️ by Horiseon</h2>
-            <p>&copy; 2024 Horiseon Social Solution Services, Inc.</p>
+            <address>
+                &copy; 2024 Horiseon Social Solution Services, Inc.
+            </address>
         </footer>
     </body>
 </html>
