renamed css classes to match web page areas and also consolidated css classes that repeated making css file easier to read.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
         <div class="hero"></div>
         <section class="content">
-            <div class="search-engine-optimization">
+            <div class="section">
                 <img
                     src="./Develop/assets/images/brand-awareness.png"
                     alt="Notepad on desk"
@@ -46,10 +46,7 @@
                     customers for your business.
                 </p>
             </div>
-            <div
-                id="online-reputation-management"
-                class="online-reputation-management"
-            >
+            <div id="online-reputation-management" class="section">
                 <img
                     src="./Develop/assets/images/online-reputation-management.jpg"
                     alt="Man using laptop and smartphone"
@@ -64,7 +61,7 @@
                     potential customers see when they search for your business.
                 </p>
             </div>
-            <div id="social-media-marketing" class="social-media-marketing">
+            <div id="social-media-marketing" class="section">
                 <img
                     src="./Develop/assets/images/social-media-marketing.jpg"
                     alt="Various people using tablets and laptops and conversating"
@@ -80,7 +77,7 @@
             </div>
         </section>
         <aside class="benefits">
-            <div class="benefit-lead">
+            <div class="benefit-aside">
                 <h3>Lead Generation</h3>
                 <img
                     src="./Develop/assets/images/lead-generation.png"
@@ -91,7 +88,7 @@
                     your business, bringing customers directly to your website.
                 </p>
             </div>
-            <div class="benefit-brand">
+            <div class="benefit-aside">
                 <h3>Brand Awareness</h3>
                 <img
                     src="./Develop/assets/images/brand-awareness.png"
@@ -103,7 +100,7 @@
                     business.
                 </p>
             </div>
-            <div class="benefit-cost">
+            <div class="benefit-aside">
                 <h3>Cost Management</h3>
                 <img
                     src="./Develop/assets/images/cost-management.png"
